--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+maitake-sync = "0.1.0"
+portable-atomic = "1.4.3"
 
 [dependencies.postcard]
 version = "1.0.7"
