--- a/source/mgnp-pitch/Cargo.toml
+++ b/source/mgnp-pitch/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 heapless = "0.7.16"
+tracing = { version = "0.1.21", default-features = false }
 
 [dependencies.serde]
 version = "1.0.188"
