--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 maitake-sync = "0.1.0"
 portable-atomic = "1.4.3"
+mnemos-bitslab = { git = "https://github.com/tosc-rs/mnemos", branch = "eliza/more-index-allocs" }
 
 [dependencies.postcard]
 version = "1.0.7"
@@ -19,3 +20,14 @@ features = ["derive"]
 
 [dependencies.plugtail]
 path = "../plugtail"
+
+[dev-dependencies]
+tracing = "0.1.37"
+
+[target.'cfg(not(loom))'.dev-dependencies]
+futures = { version = "0.3.16" }
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi"] }
+
+[target.'cfg(loom)'.dev-dependencies.loom]
+version = "0.7"
+features = ["futures", "checkpoint"]
