lol theres no --workspace arg to rustfmt

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -123,5 +123,4 @@ jobs:
     - uses: actions/checkout@v2
     - name: rust toolchain
       run: rustup show
-    - name: cargo fmt
-      run: cargo fmt --check --workspace --all-features
+    - run: cargo fmt --check
