--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -92,6 +92,7 @@ jobs:
   loom:
     name: just loom
     needs: check # skip on commits that don't compile.
+    # TODO(eliza): this *should* only run if trickypipe changed...
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -101,7 +102,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: rust toolchain
       run: rustup show
-    - run: just loom --package tricky-pipe
+    - run: just loom
 
   # check that RustDoc builds
   docs:
