start sketching bidis

--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -27,6 +27,7 @@ alloc = ["postcard/alloc"]
 maitake-sync = "0.1.0"
 portable-atomic = "1.4.3"
 mnemos-bitslab = { git = "https://github.com/tosc-rs/mnemos", branch = "eliza/bitslab-loom" }
+futures = { version = "0.3", features = ["async-await"], default-features = false }
 
 [dependencies.postcard]
 version = "1.0.7"
