--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -38,6 +38,10 @@ default-features = false
 
 [dev-dependencies]
 tracing = "0.1.39"
+# ensure `std`/`alloc` support in `serde` and `postcard` are always enabled when
+# building tests.
+serde = { version = "1.0.188", features = ["derive", "std"] }
+postcard = { version = "1.0.7", features = ["alloc"] }
 
 [target.'cfg(not(loom))'.dev-dependencies]
 futures = { version = "0.3.16" }
