--- a/source/mgnp-pitch/Cargo.toml
+++ b/source/mgnp-pitch/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 heapless = "0.7.16"
 tracing = { version = "0.1.21", default-features = false }
+postcard = { version = "1.0.7", default-features = false }
 
 [dependencies.futures]
 version = "0.3.17"
@@ -28,5 +29,13 @@ features = ["v4"]
 git = "https://github.com/tosc-rs/mnemos"
 rev = "416b7d59fbc7fa889a774f54133786a584eb8732"
 
+[dependencies.tricky-pipe]
+path = "../tricky-pipe"
+
 [dependencies.maitake]
 version = "0.1"
+
+[dev-dependencies]
+postcard = { version = "1.0.7", features = ["alloc"] }
+proptest = "1.3.1"
+proptest-derive = "0.4"
