--- a/source/mgnp-pitch/Cargo.toml
+++ b/source/mgnp-pitch/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+alloc = []
+
 [dependencies]
 heapless = "0.7.16"
 tracing = { version = "0.1.21", default-features = false }
@@ -39,3 +42,8 @@ version = "0.1"
 postcard = { version = "1.0.7", features = ["alloc"] }
 proptest = "1.3.1"
 proptest-derive = "0.4"
+tokio = { version = "1.31.0", features = ["macros", "rt", "sync", "io-util"] }
+tokio-stream = "0.1.14"
+tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }
+tricky-pipe = { path = "../tricky-pipe", features = ["alloc"] }
+
