--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -44,6 +44,7 @@ maitake-sync = { version = "0.1.0", features = ["tracing"] }
 # building tests.
 serde = { version = "1.0.188", features = ["derive", "std"] }
 postcard = { version = "1.0.7", features = ["alloc"] }
+tokio = { version = "1.33", features = ["macros", "rt"] }
 
 [target.'cfg(not(loom))'.dev-dependencies]
 futures = { version = "0.3.16" }
