--- a/source/tricky-pipe/Cargo.toml
+++ b/source/tricky-pipe/Cargo.toml
@@ -39,6 +39,7 @@ default-features = false
 
 [dev-dependencies]
 tracing = "0.1.39"
+maitake-sync = { version = "0.1.0", features = ["tracing"] }
 # ensure `std`/`alloc` support in `serde` and `postcard` are always enabled when
 # building tests.
 serde = { version = "1.0.188", features = ["derive", "std"] }
@@ -47,6 +48,7 @@ postcard = { version = "1.0.7", features = ["alloc"] }
 [target.'cfg(not(loom))'.dev-dependencies]
 futures = { version = "0.3.16" }
 tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi"] }
+tokio = { version = "1.33", features = ["macros", "rt"] }
 
 [target.'cfg(loom)'.dev-dependencies]
 loom = { version = "0.7", features = ["futures", "checkpoint"] }
