--- a/.config/nextest.toml
+++ b/.config/nextest.toml
@@ -6,3 +6,7 @@ fail-fast = false
 slow-timeout = { period = "60s", terminate-after = 2 }
 fail-fast = false
 retries = 2
+
+[profile.miri]
+slow-timeout = { period = "3m" }
+fail-fast = false
