chore(CI): fail CI on docs warnings
Turns out we never set `-Dwarnings` in the RustDoc CI job, so it wasn't
actually failing if thee docs have broken links etc.

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -135,6 +135,8 @@ jobs:
     - uses: olix0r/cargo-action-fmt@ee1ef42932e44794821dab57ef1bf7a73df8b21f
     - uses: extractions/setup-just@v1
     - run: just docs
+      env:
+          RUSTDOCFLAGS: "--cfg docsrs -D warnings"
 
   # check cargo fmt
   fmt:
