--- a/source/mgnp/Cargo.toml
+++ b/source/mgnp/Cargo.toml
@@ -45,6 +45,7 @@ proptest = "1.3.1"
 proptest-derive = "0.4"
 tokio = { version = "1.31.0", features = ["macros", "rt", "sync", "io-util"] }
 tokio-stream = "0.1.14"
+tracing = { version = "0.1.21", features = ["attributes", "std"] }
 tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }
 tricky-pipe = { path = "../tricky-pipe", features = ["alloc"] }
 
