--- a/source/calliope/Cargo.toml
+++ b/source/calliope/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "mgnp"
+name = "calliope"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "The mnemOS global network protocol."
+readme = "README.md"
 
 [features]
 alloc = ["postcard/alloc", "tricky-pipe/alloc"]
