feat(calliope): add request-response proto utils

--- a/source/calliope/Cargo.toml
+++ b/source/calliope/Cargo.toml
@@ -13,6 +13,7 @@ cobs = "0.2"
 heapless = "0.7.16"
 tracing = { version = "0.1.21", default-features = false }
 postcard = { version = "1.0.7", default-features = false }
+maitake-sync = { version = "0.1", default-features = false }
 
 [dependencies.futures]
 version = "0.3.17"
