--- a/source/calliope/Cargo.toml
+++ b/source/calliope/Cargo.toml
@@ -11,7 +11,6 @@ alloc = ["postcard/alloc", "tricky-pipe/alloc"]
 [dependencies]
 cobs = "0.2"
 heapless = "0.7.16"
-tracing = { version = "0.1.21", default-features = false }
 postcard = { version = "1.0.7", default-features = false }
 maitake-sync = { version = "0.1", default-features = false }
 
@@ -37,8 +36,10 @@ rev = "416b7d59fbc7fa889a774f54133786a584eb8732"
 [dependencies.tricky-pipe]
 path = "../tricky-pipe"
 
-[dependencies.maitake]
-version = "0.1"
+[dependencies.tracing]
+version = "0.1.21"
+default-features = false
+features = ["attributes"]
 
 [dev-dependencies]
 postcard = { version = "1.0.7", features = ["alloc"] }
@@ -46,7 +47,7 @@ proptest = "1.3.1"
 proptest-derive = "0.4"
 tokio = { version = "1.31.0", features = ["macros", "rt", "sync", "io-util"] }
 tokio-stream = "0.1.14"
-tracing = { version = "0.1.21", features = ["attributes", "std"] }
+tracing = { version = "0.1.21", features = ["std"] }
 tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "ansi", "env-filter"] }
 tricky-pipe = { path = "../tricky-pipe", features = ["alloc"] }
 
